@@ -3,8 +3,6 @@ package org.embeddedt.embeddium.api;
 import net.minecraft.core.SectionPos;
 import net.minecraft.world.level.BlockAndTintGetter;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.eventbus.api.Event;
 import org.jetbrains.annotations.ApiStatus;
 
 import java.util.ArrayList;
@@ -24,7 +22,7 @@ import java.util.Objects;
  * event handler. Note that {@link MeshAppender#render(MeshAppender.Context)} will be called on a worker thread, and
  * therefore accessing the world is not safe inside the appender itself. Instead, use the provided {@link BlockAndTintGetter}.
  */
-public class ChunkMeshEvent extends Event {
+public class ChunkMeshEvent {
     private final Level world;
     private final SectionPos sectionOrigin;
     private List<MeshAppender> meshAppenders = null;
@@ -60,7 +58,9 @@ public class ChunkMeshEvent extends Event {
     @ApiStatus.Internal
     public static List<MeshAppender> post(Level world, SectionPos origin) {
         ChunkMeshEvent event = new ChunkMeshEvent(world, origin);
-        MinecraftForge.EVENT_BUS.post(event);
-        return Objects.requireNonNullElse(event.meshAppenders, Collections.emptyList());
+        return List.of();
+        // TODO port
+        //MinecraftForge.EVENT_BUS.post(event);
+        //return Objects.requireNonNullElse(event.meshAppenders, Collections.emptyList());
     }
 }
